# sqlnosql

./: README.md  docker-compose.yml  main.py  pyproject.toml
asignement/: asignment.md  criteria.md
report/: comparison_report.md  conceptual_model.md  make_report.py  report.docx
results/: direct_comparison.csv  performance_summary.csv
scripts/: analyze_results.py  generate_data.py  measurements.py  models.py  test_connections.py
sql/: schema.sql
